[tool.poetry]
name = "jonja"
version = "0.1.2"
description = "Simple jinja-based texts and objects render"
authors = ["lightmanLP <liteman1000@gmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["jinja", "template", "text"]

[tool.poetry.urls]
"Github" = "https://github.com/UT1C/jonja"

[tool.poetry.dependencies]
python = "^3.10"
jinja2 = "^3.1.3"
yamt = "^1.0.0"
aiofile = "^3.8.8"
async-cache = {git = "https://github.com/UT1C/async-cache"}
oyaml = "^1.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
