[project]
name = "jonja"
version = "0.1.4"
description = "Simple jinja-based texts and objects render"
authors = [
    {name = "lightmanLP",email = "liteman1000@gmail.com"}
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.10,<4"
dependencies = [
    "jinja2 (>=3.1.6,<4.0.0)",
    "yamt (>=1.0.0,<2.0.0)",
    "aiofile (>=3.9.0,<4.0.0)",
    "oyaml (>=1.0,<2.0)",
    "utic-cache (>=2.2.1,<3.0.0)"
]

[tool.poetry]
keywords = ["jinja", "template", "text"]

[tool.poetry.urls]
repository = "https://github.com/UT1C/jonja"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.2.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
